# CeresLog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CeresLogConfig.cmake
include/CeresLog/: ILoggerBackend.h  Loggable.h  Logging.h
src/: Discovery.cpp  Discovery.h  ILoggerBackend.h  LogDirectory.cpp  LogDirectory.h  LogSingleton.cpp  LogSingleton.h  Loggable.cpp  Loggable.h  Logger.cpp  Logger.h  LoggerCombinedBackend.cpp  LoggerCombinedBackend.h  LoggerConsoleBackend.cpp  LoggerConsoleBackend.h  LoggerFactory.cpp  LoggerFactory.h  LoggerFileBackend.cpp  LoggerFileBackend.h  Logging.cpp  Logging.h
test/: CMakeLists.txt  LogDirectoryTest.cpp  LogFileTest.cpp  LoggableTest.cpp  LoggableTest.h  LoggerCombinedBackendTest.cpp  LoggerFactoryTest.cpp  LoggerFileBackendTest.cpp  LoggerTest.cpp  LoggerTestBackend.cpp  LoggerTestBackend.h  LoggingTest.cpp  RandomString.cpp  RandomString.h  TemporaryDirectory.cpp  TemporaryDirectory.h
